@@ -4,10 +4,15 @@ Changelog
 1.0 - Unreleased
 ----------------
 
+* Call the Eggs constructor as well: working_set() needs too many of the
+  internal variables it sets for us to set them ourselves. This fixes
+  the recipe breaking when using find-links in buildout.
+  [wichert]
 
 
 1.0b1 - June 13, 2008
 ---------------------
 
 * Initial release
+  [wichert]
 
